cover.css
/* Links */
a:link {
    color: #216fab;
    text-decoration: none;
}

a:visited,
a:hover {
    color: #216fab;
    text-decoration: underline;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
    color: #ffffff;
    background-color: #ffffff;
}

/*
 * Base structure
 */
html,
body {
    height: 100%;
    background-color: #ffffff;
}
body {
    font-family: "Quicksand";
    font-weight: 400;
    color: #2d2d2d;
}

/*
 * Custom (not about bootstrap)
 */
ul,
li,
p {
    font-size: 14px;
    line-height: 150%;
}
.p-heading {
    font-family: "Quicksand";
    font-size: 32px;
    font-weight: 400;
    color: #333333;
}
.p-subheading {
    font-family: "Quicksand";
    font-size: 24px;
    font-weight: 400;
    color: #333333;
}
.p-subsubheading {
    font-family: "Quicksand";
    font-size: 18px;
    font-weight: 400;
}

.emph {
    font-weight: 600;
    color: #333333;
}
.material-icons.md-16 {
    font-size: 16px;
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
    display: table;
    width: 100%;
    height: 100%; /* For at least Firefox */
    min-height: 100%;
}
.site-wrapper-inner {
    display: table-cell;
    vertical-align: top;
}
.cover-container {
    margin-right: auto;
    margin-left: auto;
}

/* Padding for spacing */
.inner {
    padding: 30px;
}

/*
 * Header
 */
/* Bootstrap overrides */
.nav > li > a {
    padding: 0px 0px;
}
/* Bootstrap overrides end */

.masthead {
    background-color: #ffffff;
}

.masthead-brand {
    margin-top: 10px;
    margin-bottom: 10px;
}

.masthead-nav > li {
    display: inline-block;
}
.masthead-nav > li + li {
    margin-left: 20px;
}
.masthead-nav > li > a {
    padding-right: 0;
    padding-left: 0;
    font-size: 16px;
    font-weight: bold;
    color: #2d2d2d; /* IE8 proofing */
    border-bottom: 2px solid transparent;
}
.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
    color: #216fab;
    text-decoration: underline;
    background-color: #ffffff;
    border-bottom-color: #ffffff;
}
.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
    font-family: "Quicksand";
    font-weight: 400;
    color: #2d2d2d;
    border-bottom-color: #216fab;
}

@media (min-width: 768px) {
    .masthead-brand {
	float: left;
    }
    .masthead-nav {
	float: right;
    }
}


/*
 * Cover
 */

.cover {
    padding: 0 20px;
}
.cover .btn-lg {
    padding: 10px 20px;
    font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
    color: #ffffff; /* IE8 proofing */
}


/*
 * Affix and center
 */

@media (min-width: 768px) {
    /* Pull out the header and footer */
    .masthead {
	z-index: 1000;
	position: fixed;
	top: 0;
    }
    .mastfoot {
	position: fixed;
	bottom: 0;
    }
    /* Start the vertical centering */
    .site-wrapper-inner {
	vertical-align: middle;
    }
    /* Handle the widths */
    .masthead,
    .mastfoot,
    .cover-container {
	width: 100%; /* Must be percentage or pixels for horizontal alignment */
    }
}

@media (min-width: 992px) {
    .masthead,
    .mastfoot,
    .cover-container {
	width: 900px;
    }
}

